Tab2 + Album view working (Gallery/Single view not working)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -22,6 +23,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".AlbumActivity"
+            android:configChanges="orientation|screenSize"/>
+
+        <activity android:name=".GalleryPreview"
+            android:configChanges="orientation|screenSize"/>
+
     </application>
 
 </manifest>
