--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.jsibbold:zoomage:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
