--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.jsibbold:zoomage:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
 }
